apps/homescreen/everything.me/css/everything.me.css
#evmePage {
    display: none;
}

.evmeScope {
    bottom: auto;
    height: calc((100% - 7.5rem)/4); /* height of footer */
}

.evme-has-query .evmeScope {
    height: 100%;
}

.evme-keyboard-visible .evmeScope,
.evme-smart-folder-visible .evmeScope,
.evme-suggest-folders-loading .evmeScope {
    height: 100%;
}
.evme-smart-folder-visible #footer,
.evme-suggest-folders-loading #footer {
  display: none;
}

.evme-keyboard-visible .apps > div.evmePage ol,
.evme-has-query .apps > div.evmePage ol
{
    opacity: 0;
}
.apps > div.evmePage {
    -moz-box-sizing: border-box;
    padding-top: calc(25% + 1.3rem);
}

#footer {
    transition: -moz-transform .1s ease;   
}
.evme-displayed.evme-keyboard-visible #footer,
.evme-displayed.evme-has-query #footer{
    transform: translateY(100%);
}

